CNN_lenet5/solution6/.autopilot/db/sigmoid.pp.0.cpp.clang-tidy.loop-label.out.log
C:\Users\TRETEC\OneDrive\Documents\Master2\HLS-FPGA\cnn_hls\CNN_lenet5\solution6\.autopilot\db\sigmoid.pp.0.cpp:181:51: error: Invalid Directive: for current device, RAM_1P + BRAM is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=sigmoidLUT type=RAM_1P impl=BRAM
                                                  ^
